--- a/server/views/pages/start.njk
+++ b/server/views/pages/start.njk
@@ -181,7 +181,7 @@
                             actions: {
                                 items: [
                                 {
-                                    href: "/person/" + nomsId + "/edit-court-case/" + courtCaseDetails.courtCaseUuid +  "/" + addOrEditCourtAppearance + "/" + courtCaseDetails.appearanceTotal + "/warrant-type",
+                                    href: "/person/" + nomsId + "/edit-court-case/" + courtCaseDetails.courtCaseUuid +  "/add-court-appearance/" + courtCaseDetails.appearanceTotal + "/warrant-type",
                                     text: "Add an appearance",
                                     visuallyHiddenText: "Add an appearance"
                                 }]
