--- a/server/views/pages/courtAppearance/details.njk
+++ b/server/views/pages/courtAppearance/details.njk
@@ -216,7 +216,7 @@
                         text: "Confirm changes"
                     }) }}
 
-                    <a class="govuk-link" href="#">Cancel changes</a>
+                    <a class="govuk-link" href="/person/{{ nomsId }}/{{ addOrEditCourtCase }/{{ courtCaseReference }}/details">Cancel changes</a>
                 </div>
             </form>
         </div>
