--- a/server/views/pages/courtAppearance/case-outcome-applied-all.njk
+++ b/server/views/pages/courtAppearance/case-outcome-applied-all.njk
@@ -34,7 +34,7 @@
                             checked: caseOutcomeAppliedAllForm.caseOutcomeAppliedAll === 'false'
                         }
                     ],
-                    errorMessage:  errors | findError('caseOutcomeAppliedAll'),
+                    errorMessage:  errors | findError('caseOutcomeAppliedAll')
                 }) }}
 
                 {{ govukButton({
