fix scss build, cleanup

--- a/assets/scss/application.scss
+++ b/assets/scss/application.scss
@@ -4,8 +4,8 @@ $path: "/assets/images/";
 $moj-page-width: 1170px;
 $govuk-page-width: $moj-page-width;
 
-@import "govuk-frontend/dist/govuk/all";
-@import "@ministryofjustice/frontend/moj/all";
+@import 'govuk/all';
+@import 'moj/all';
 @import 'hmpps/all';
 @import 'dist/accessible-autocomplete.min';
 
