RASS-267 fix submitting existing court name

--- a/server/views/pages/courtAppearance/court-name.njk
+++ b/server/views/pages/courtAppearance/court-name.njk
@@ -28,62 +28,62 @@
                     items: [
                         {
                             text: "",
-                            selected: not courtName
+                            selected: not courtNameForm.courtName
                         },
                         {
                             value:"Bedford Magistrates Court",
                             text: "Bedford Magistrates Court",
-                            selected: courtName === "Bedford Magistrates Court"
+                            selected: courtNameForm.courtName === "Bedford Magistrates Court"
                         },
                         {
                             value: "Birmingham Crown Court",
                             text: "Birmingham Crown Court",
-                            selected: courtName === "Birmingham Crown Court"
+                            selected: courtNameForm.courtName === "Birmingham Crown Court"
                         },
                         {
                             value: "Birmingham Magistrates Court",
                             text: "Birmingham Magistrates Court",
-                            selected: courtName === "Birmingham Magistrates Court"
+                            selected: courtNameForm.courtName === "Birmingham Magistrates Court"
                         },
                         {
                             value: "Bradford Magistrates Court",
                             text: "Bradford Magistrates Court",
-                            selected: courtName === "Bradford Magistrates Court"
+                            selected: courtNameForm.courtName === "Bradford Magistrates Court"
                         },
                         {
                             value: "Bradford Crown Court",
                             text: "Bradford Crown Court",
-                            selected: courtName === "Bradford Crown Court"
+                            selected: courtNameForm.courtName === "Bradford Crown Court"
                         },
                         {
                             value: "Carlisle Magistrates Court",
                             text: "Carlisle Magistrates Court",
-                            selected: courtName === "Carlisle Magistrates Court"
+                            selected: courtNameForm.courtName === "Carlisle Magistrates Court"
                         },
                         {
                             value: "Chester Combined Court Centre",
                             text: "Chester Combined Court Centre",
-                            selected: courtName === "Chester Combined Court Centre"
+                            selected: courtNameForm.courtName === "Chester Combined Court Centre"
                         },
                         {
                             value: "Doncaster Magistrates Court",
                             text: "Doncaster Magistrates Court",
-                            selected: courtName === "Doncaster Magistrates Court"
+                            selected: courtNameForm.courtName === "Doncaster Magistrates Court"
                         },
                         {
                             value: "Leeds Combined Court Centre",
                             text: "Leeds Combined Court Centre",
-                            selected: courtName === "Leeds Combined Court Centre"
+                            selected: courtNameForm.courtName === "Leeds Combined Court Centre"
                         },
                         {
                             value: "Luton Crown Court",
                             text: "Luton Crown Court",
-                            selected: courtName === "Luton Crown Court"
+                            selected: courtNameForm.courtName === "Luton Crown Court"
                         },
                         {
                             value: "Luton Magistrates Court",
                             text: "Luton Magistrates Court",
-                            selected: courtName === "Luton Magistrates Court"
+                            selected: courtNameForm.courtName === "Luton Magistrates Court"
                         }
                     ]
                 }) }}
