--- a/server/views/pages/start.njk
+++ b/server/views/pages/start.njk
@@ -168,7 +168,7 @@
                             }
                     }) }}
 
-                <a href="/person/{{nomsId}}/view-court-case/{{courtCaseDetails.courtCaseUuid}}">View details about this court case</a>
+                <a href="/person/{{nomsId}}/view-court-case/{{courtCaseDetails.courtCaseUuid}}/details">View details about this court case</a>
 
                 {% endset %}
 
