fix dancing table

--- a/server/views/pages/courtCaseDetails.njk
+++ b/server/views/pages/courtCaseDetails.njk
@@ -113,19 +113,24 @@
             {{ govukTable({
                 head: [
                 {
-                    text: "Case reference"
+                    text: "Case reference",
+                    classes: "govuk-!-width-one-quarter"
                 }, 
                 {
-                    text: "Location"
+                    text: "Location",
+                    classes: "govuk-!-width-one-quarter"
                 },
                 {
-                    text: "Warrant date"
+                    text: "Warrant date",
+                    classes: "govuk-!-width-one-quarter"
                 },
                 {
-                    text: "Outcome"
+                    text: "Outcome",
+                    classes: "govuk-!-width-one-quarter"
                 },
                 {
-                    text: ""
+                    text: "",
+                    classes: "govuk-!-width-one-quarter"
                 }],
                 rows: appearanceRows,
                 attributes: {
