--- a/server/views/partials/offenceCaption.njk
+++ b/server/views/partials/offenceCaption.njk
@@ -1,6 +1,8 @@
 
 <span class="govuk-caption-l">
-    {% if offence.sentence.countNumber and not isDeleteOffence %}
+    {% if not isAddCourtAppearance %}
+        Appearance {{ courtAppearance.caseReferenceNumber }} at {{ courtAppearance.courtName }} on {{ courtAppearance.warrantDate | formatDate }}
+    {% elif offence.sentence.countNumber and not isDeleteOffence %}
         Add sentence information for count {{ offence.sentence.countNumber }}
     {% elif isAddCourtCase %}
         Add a court case
