RASS-276 update edit offence to latest design

--- a/server/views/pages/offence/edit-offence.njk
+++ b/server/views/pages/offence/edit-offence.njk
@@ -4,6 +4,120 @@
 
 {% set offenceSentence = 'sentence' if offence.sentence else 'offence' %}
 
+{% set offenceHtml %}
+{{ offence.offenceCode }}
+{{ offenceMap[offence.offenceCode] }}
+{% if offence.terrorRelated %}
+    <br>
+    <strong class="govuk-tag govuk-!-margin-top-2">Terror-related</strong>
+{% endif %}
+{% endset %}
+
+{% set summaryRows=[{
+                    key: {
+                        text: "Offence"
+                    },
+                    value: {
+                        html: offenceHtml
+                    },
+                    actions: {
+                        items: [{
+                            href: "/person/" +  nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference  + "/" + addOrEditCourtAppearance + "/" + appearanceReference + "/offences/" + offenceReference + "/offence-code?submitToEditOffence=true",
+                            text: "Edit",
+                            visuallyHiddenText: "offence code"
+                        }]
+                    }
+                },
+                {
+                    key: {
+                        text: "Commited on"
+                    }, value: {
+                        text: offence.offenceStartDate | formatDate + (" to " + offence.offenceEndDate | formatDate if offence.offenceEndDate else '')
+                    },
+                    actions: {
+                        items: [{
+                            href: "/person/" +  nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference  + "/" + addOrEditCourtAppearance + "/" + appearanceReference + "/offences/" + offenceReference + "/offence-date?submitToEditOffence=true",
+                            text: "Edit",
+                            visuallyHiddenText: "commited on"
+                        }]
+                    }
+                }] %}
+
+{% if offence.sentence %}
+    {% set summaryRows = ([{
+                    key: {
+                    text: "Count number"
+                },
+                    value: {
+                    text: "Count " + offence.sentence.countNumber
+                },
+                    actions: {
+                        items: [{
+                            href: "/person/" +  nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference  + "/" + addOrEditCourtAppearance + "/" + appearanceReference + "/offences/" + offenceReference + "/count-number?submitToEditOffence=true",
+                            text: "Edit",
+                            visuallyHiddenText: "count number"
+                        }]
+                    }
+                }].concat(summaryRows,[{
+                    key: {
+                    text: "Sentence type"
+                },
+                    value: {
+                    text: offence.sentence.sentenceType
+                },
+                    actions: {
+                        items: [{
+                            href: "/person/" +  nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference  + "/" + addOrEditCourtAppearance + "/" + appearanceReference + "/offences/" + offenceReference + "/sentence-type?submitToEditOffence=true",
+                            text: "Edit",
+                            visuallyHiddenText: "sentence type"
+                        }]
+                    }
+                },{
+                    key: {
+                    text: "Sentence length"
+                },
+                    value: {
+                    text: offence.sentence.custodialSentenceLength | formatLengths
+                },
+                    actions: {
+                        items: [{
+                            href: "/person/" +  nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference  + "/" + addOrEditCourtAppearance + "/" + appearanceReference + "/offences/" + offenceReference + "/sentence-length?submitToEditOffence=true",
+                            text: "Edit",
+                            visuallyHiddenText: "sentence length"
+                        }]
+                    }
+                },{
+                    key: {
+                    text: "Consecutive or concurrent"
+                },
+                    value: {
+                    text: offence.sentence.sentenceServeType | capitalize + (' to count ' + offence.sentence.consecutiveTo if offence.sentence.consecutiveTo else '' )
+                },
+                    actions: {
+                        items: [{
+                            href: "/person/" +  nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference  + "/" + addOrEditCourtAppearance + "/" + appearanceReference + "/offences/" + offenceReference + "/sentence-serve-type?submitToEditOffence=true",
+                            text: "Edit",
+                            visuallyHiddenText: "consecutive or concurrent"
+                    }]
+                }
+            }] )) %}
+{% else %}
+    {% set summaryRows = (summaryRows.concat({
+                    key: {
+                        text: "Outcome"
+                    }, value: {
+                        text: offence.outcome
+                    },
+                    actions: {
+                        items: [{
+                            href: "/person/" +  nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference  + "/" + addOrEditCourtAppearance + "/" + appearanceReference + "/offences/" + offenceReference + "/offence-outcome?submitToEditOffence=true",
+                            text: "Edit",
+                            visuallyHiddenText: "outcome"
+                        }]
+                    }
+                    })) %}
+{% endif %}
+
 {% set pageTitle = applicationName + " - Edit an " + offenceSentence %}
 {% block content %}
     {{ super() }}
@@ -14,11 +128,10 @@
                 {% include "../../partials/offenceCaption.njk" %}
                 <h1 class="govuk-heading-l">Edit {{ offenceSentence }} details</h1>
                 
-                {% if offence.sentence %}
-                    {% include "../../partials/editSentenceDetails.njk" %}
-                {% else %}
-                    {% include "../../partials/editOffenceDetails.njk" %}
-                {% endif %}
+                {{ govukSummaryList({
+                    rows: summaryRows
+                }) }}
+
                 {{ govukButton({
                     text: "Accept changes"
                 }) }}
