RASS-277 corrected displaying count number on case details page

--- a/server/views/pages/courtCaseDetails.njk
+++ b/server/views/pages/courtCaseDetails.njk
@@ -63,7 +63,7 @@
                             offenceStartDate: charge.offenceStartDate,
                             offenceEndDate: charge.offenceEndDate,
                             outcome: charge.outcome,
-                            countNumber: charge.sentence.countNumber,
+                            countNumber: charge.sentence.chargeNumber,
                             terrorRelated: charge.terrorRelated,
                             isSentenced: charge.sentence,
                             custodialSentenceLength: charge.sentence.custodialPeriodLength | periodLengthToSentenceLength,
