--- a/server/views/pages/courtCaseDetails.njk
+++ b/server/views/pages/courtCaseDetails.njk
@@ -1,6 +1,6 @@
 {% extends "../partials/prisonerBannerBackLayout.njk" %}
 {% from "govuk/components/summary-list/macro.njk" import govukSummaryList %}
-{% from "../components/offenceCard/macro.njk" import offenceCard %}
+{% from "hmpps/components/court-cases-release-dates/offence-card/macro.njk" import offenceCard %}
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "govuk/components/table/macro.njk" import govukTable %}
 {% from "govuk/components/details/macro.njk" import govukDetails %}
@@ -60,8 +60,8 @@
                         offenceCard({
                             offenceCode: charge.offenceCode,
                             offenceName: offenceMap[charge.offenceCode],
-                            offenceStartDate: charge.offenceStartDate,
-                            offenceEndDate: charge.offenceEndDate,
+                            offenceStartDate: charge.offenceStartDate | formatDate,
+                            offenceEndDate: charge.offenceEndDate | formatDate,
                             outcome: charge.outcome,
                             countNumber: charge.sentence.chargeNumber,
                             terrorRelated: charge.terrorRelated,
