--- a/server/views/pages/offence/review-offences.njk
+++ b/server/views/pages/offence/review-offences.njk
@@ -1,7 +1,7 @@
 {% extends "../../partials/prisonerBannerLayout.njk" %}
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "govuk/components/radios/macro.njk" import govukRadios %}
-{% from "../../components/offenceCard/macro.njk" import offenceCard %}
+{% from "hmpps/components/court-cases-release-dates/offence-card/macro.njk" import offenceCard %}
 
 {% set pageTitle = applicationName + " - Review offences" %}
 
@@ -20,8 +20,8 @@
                     offenceCard({
                         offenceCode: offence.offenceCode,
                         offenceName: offenceMap[offence.offenceCode],
-                        offenceStartDate: offence.offenceStartDate,
-                        offenceEndDate: offence.offenceEndDate,
+                        offenceStartDate: offence.offenceStartDate | formatDate,
+                        offenceEndDate: offence.offenceEndDate | formatDate,
                         outcome: offence.outcome,
                         countNumber: offence.sentence.countNumber,
                         terrorRelated: offence.terrorRelated,
