--- a/server/views/pages/start.njk
+++ b/server/views/pages/start.njk
@@ -3,7 +3,7 @@
 {% from "govuk/components/summary-list/macro.njk" import govukSummaryList %}
 {% from "govuk/components/table/macro.njk" import govukTable %}
 {% from "govuk/components/details/macro.njk" import govukDetails %}
-{% from "../components/offenceCard/macro.njk" import offenceCard %}
+{% from "hmpps/components/court-cases-release-dates/offence-card/macro.njk" import offenceCard %}
 
 {% set pageTitle = applicationName + " - Home" %}
 
@@ -147,8 +147,8 @@
                                 offenceCard({
                                     offenceCode: offence.offenceCode,
                                     offenceName: offenceMap[offence.offenceCode],
-                                    offenceStartDate: offence.offenceStartDate,
-                                    offenceEndDate: offence.offenceEndDate,
+                                    offenceStartDate: offence.offenceStartDate | formatDate,
+                                    offenceEndDate: offence.offenceEndDate | formatDate,
                                     outcome: offence.outcome,
                                     countNumber: offence.sentence.countNumber,
                                     terrorRelated: offence.terrorRelated,
