RASS-275 set heading for edit

--- a/server/views/pages/courtAppearance/overall-case-outcome.njk
+++ b/server/views/pages/courtAppearance/overall-case-outcome.njk
@@ -12,7 +12,7 @@
                     name: "overallCaseOutcome",
                     fieldset: {
                         legend: {
-                        text: "Select the overall case outcome",
+                        text: "Select the overall case outcome" if isAddCourtAppearance else "Edit the overall case outcome",
                         isPageHeading: true,
                         classes: "govuk-fieldset__legend--l"
                         }
